# swanky

./: .gitignore  Cargo.toml
cheddar/: Cargo.toml
cheddar/benches/: arithmetic.rs  decomposition.rs  is_prime.rs
cheddar/examples/: edabits_range.rs  quicksilver_range.rs  runner.rs
cheddar/src/: four_squares.rs  lib.rs  prover.rs  traits.rs  verifier.rs
cheddar/src/square_decomp/: arithmetic.rs  data.rs  decomposition.rs  mod.rs  primality.rs
ocelot/: Cargo.toml
ocelot/examples/: edabits.rs
ocelot/src/: errors.rs  lib.rs
ocelot/src/edabits/: edabits.rs  homcom.rs
ocelot/src/ot/mozzarella/: lpn.rs  prover.rs  utils.rs  verifier.rs
ocelot/src/ot/mozzarella/cache/: cacheinit.rs  prover.rs  verifier.rs
ocelot/src/ot/mozzarella/ggm/: prover.rs  verifier.rs
ocelot/src/ot/mozzarella/mozzarella/: mod.rs  prover.rs  verifier.rs
ocelot/src/ot/mozzarella/spvole/: mod.rs  prover.rs  verifier.rs
scuttlebutt/: Cargo.toml
scuttlebutt/.cargo/: config
scuttlebutt/src/: arm_block.rs  block.rs  channel.rs  field.rs  lib.rs  ring.rs  utils.rs
scuttlebutt/src/field/: f128b.rs  f2.rs  f61p.rs  f64b.rs  prime_field_using_ff.rs  small_binary_fields.rs
scuttlebutt/src/ring/: r64.rs  rx.rs
